@@ -372,9 +372,9 @@ AT_DATA([prog.cob], [
 ])
 
 AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
-[prog.cob:12: error: 88-level cannot be used here
-prog.cob:12: error: 88-level cannot be used here
-prog.cob:12: error: 88-level cannot be used here
+[prog.cob:12: error: level 88 item 'blah' may not be used here
+prog.cob:12: error: level 88 item 'blah' may not be used here
+prog.cob:12: error: level 88 item 'blah' may not be used here
 ])
 
 AT_CLEANUP
