@@ -3,6 +3,8 @@
 
 	* parser.y (string_statement): fixed bug #497 STRING within
 	  STRING did override the target list
+	* parser.y, reserved.c: work on FR #183 added VALIDATE statement
+	  as PENDING
 
 2018-02-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
